// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-accordion-group/openAll="true" With Delayed Accordion Content 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large m--is-empty-content"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="true"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
      >
        <div
          class="m-accordion__header-content"
        />
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/openAll="true" With Delayed Accordions 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  />
</article>
`;

exports[`Storyshots modul-components|m-accordion-group/openAll="true" With Dynamic Content 1`] = `
<div>
  <button>
    Add accordion
  </button>
   
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--no-title"
    >
      <!---->
       
      <div
        class="m-accordion-group__secondary-content"
      >
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
      <div
        class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          aria-expanded="true"
          aria-label="Cacher le contenu"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="button"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          />
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
          />
        </div>
         
        <div
          aria-labelledby="fakeId"
          class="m-accordion__body-wrap"
          id="fakeId-body-wrap"
        >
          <div
            class="m-accordion__body m--has-padding"
          >
            Some Accordion Content
          </div>
        </div>
      </div>
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-accordion-group/openAll="true" With Initial Content 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
    <div
      class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="true"
        aria-label="Cacher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        />
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
        />
      </div>
       
      <div
        aria-labelledby="fakeId"
        class="m-accordion__body-wrap"
        id="fakeId-body-wrap"
      >
        <div
          class="m-accordion__body m--has-padding"
        >
          Some Accordion Content
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="true"
        aria-label="Cacher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        />
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
        />
      </div>
       
      <div
        aria-labelledby="fakeId"
        class="m-accordion__body-wrap"
        id="fakeId-body-wrap"
      >
        <div
          class="m-accordion__body m--has-padding"
        >
          Some Accordion Content
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion m--is-default m--is-open m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        aria-expanded="true"
        aria-label="Cacher le contenu"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="button"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        />
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-open m--is-large m--is-left"
        />
      </div>
       
      <div
        aria-labelledby="fakeId"
        class="m-accordion__body-wrap"
        id="fakeId-body-wrap"
      >
        <div
          class="m-accordion__body m--has-padding"
        >
          Some Accordion Content
        </div>
      </div>
    </div>
  </div>
</article>
`;
